@startuml

title __REPOSITORIES's Class Diagram__\n

  namespace com.example.demo {
    namespace repositories {
      class com.example.demo.repositories.AddressRepository {
      }
    }
  }
  

  namespace com.example.demo {
    namespace repositories {
      class com.example.demo.repositories.CountryRepository {
          + findByCode()
          + save()
      }
    }
  }
  

  namespace com.example.demo {
    namespace repositories {
      class com.example.demo.repositories.GroupRepository {
          + addAndSaveAdmin()
          + findAdminsById()
          + findAll()
          + findById()
          + findByName()
          + removeAndSaveAdmin()
          + save()
      }
    }
  }
  

  namespace com.example.demo {
    namespace repositories {
      class com.example.demo.repositories.PersonRepository {
          + addAndSaveAddress()
          + existsByEmail()
          + existsByUsername()
          + findAddressesById()
          + findAll()
          + findById()
          + findByLastName()
          + findByUsername()
          + save()
      }
    }
  }
  

  namespace com.example.demo {
    namespace repositories {
      class com.example.demo.repositories.RoleRepository {
          + findByName()
          + save()
      }
    }
  }
  

  com.example.demo.repositories.AddressRepository o-- com.example.demo.datamodel.assemblers.PersonDomainDataAssembler : addressAssembler
  com.example.demo.repositories.AddressRepository o-- com.example.demo.repositories.jpa.AddressJpaRepository : addressJpaRepository
  com.example.demo.repositories.CountryRepository o-- com.example.demo.datamodel.assemblers.CountryDomainDataAssembler : countryAssembler
  com.example.demo.repositories.CountryRepository o-- com.example.demo.repositories.jpa.CountryJpaRepository : countryJpaRepository
  com.example.demo.repositories.GroupRepository o-- com.example.demo.repositories.jpa.AdminJpaRepository : adminJpaRepository
  com.example.demo.repositories.GroupRepository o-- com.example.demo.datamodel.assemblers.GroupDomainDataAssembler : groupAssembler
  com.example.demo.repositories.GroupRepository o-- com.example.demo.repositories.jpa.GroupJpaRepository : groupJpaRepository
  com.example.demo.repositories.PersonRepository o-- com.example.demo.repositories.jpa.AddressJpaRepository : addressJpaRepository
  com.example.demo.repositories.PersonRepository o-- com.example.demo.datamodel.assemblers.PersonDomainDataAssembler : personAssembler
  com.example.demo.repositories.PersonRepository o-- com.example.demo.repositories.jpa.PersonJpaRepository : personJpaRepository
  com.example.demo.repositories.RoleRepository o-- com.example.demo.datamodel.assemblers.RoleDomainDataAssembler : roleAssembler
  com.example.demo.repositories.RoleRepository o-- com.example.demo.repositories.jpa.RoleJpaRepository : roleJpaRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
